--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,10 @@
             <artifactId>spring-context</artifactId>
             <version>4.2.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 </project>
